@@ -9,6 +9,112 @@ import numpy as np
 import re
 
 #==============================================================================
+class Func(object):
+    '''A function object which stores the real function so it can be 
+    dynamically replaced from its parents.
+    '''
+    def __init__(self, func):
+        self.func = func
+    
+    def __call__(self, *args):
+        return self.func(*args)
+    
+    def replace_func(self, func):
+        self.func = func
+
+class Proxy(object):
+    '''Proxy class borrowed from ASPN Recipe 496741 at adress
+    http://code.activestate.com/recipes/496741/
+    '''
+    __slots__ = ["_obj", "__weakref__"]
+    def __init__(self, obj):
+        object.__setattr__(self, "_obj", obj)
+    
+    #
+    # proxying (special cases)
+    #
+    def __getattribute__(self, name):
+        return getattr(object.__getattribute__(self, "_obj"), name)
+    def __delattr__(self, name):
+        delattr(object.__getattribute__(self, "_obj"), name)
+    def __setattr__(self, name, value):
+        setattr(object.__getattribute__(self, "_obj"), name, value)
+    
+    def __nonzero__(self):
+        return bool(object.__getattribute__(self, "_obj"))
+    def __str__(self):
+        return str(object.__getattribute__(self, "_obj"))
+    def __repr__(self):
+        return repr(object.__getattribute__(self, "_obj"))
+    def __call__(self, *args, **kwargs):
+        return object.__getattribute__(self, "_obj").__call__(*args, **kwargs)
+    
+    def _change_object(self, obj):
+        object.__setattr__(self, "_obj", obj)
+    #
+    # factories
+    #
+    _special_names = [
+        '__abs__', '__add__', '__and__', '__cmp__', '__coerce__', 
+        '__contains__', '__delitem__', '__delslice__', '__div__', '__divmod__', 
+        '__eq__', '__float__', '__floordiv__', '__ge__', '__getitem__', 
+        '__getslice__', '__gt__', '__hash__', '__hex__', '__iadd__', '__iand__',
+        '__idiv__', '__idivmod__', '__ifloordiv__', '__ilshift__', '__imod__', 
+        '__imul__', '__int__', '__invert__', '__ior__', '__ipow__', '__irshift__', 
+        '__isub__', '__iter__', '__itruediv__', '__ixor__', '__le__', '__len__', 
+        '__long__', '__lshift__', '__lt__', '__mod__', '__mul__', '__ne__', 
+        '__neg__', '__oct__', '__or__', '__pos__', '__pow__', '__radd__', 
+        '__rand__', '__rdiv__', '__rdivmod__', '__reduce__', '__reduce_ex__', 
+        '__repr__', '__reversed__', '__rfloorfiv__', '__rlshift__', '__rmod__', 
+        '__rmul__', '__ror__', '__rpow__', '__rrshift__', '__rshift__', '__rsub__', 
+        '__rtruediv__', '__rxor__', '__setitem__', '__setslice__', '__sub__', 
+        '__truediv__', '__xor__', 'next',
+    ]
+    
+    @classmethod
+    def _create_class_proxy(cls, theclass):
+        """creates a proxy for the given class"""
+        
+        def make_method(name):
+            def method(self, *args, **kw):
+                return getattr(object.__getattribute__(self, "_obj"), name)(*args, **kw)
+            return method
+        
+        namespace = {}
+        for name in cls._special_names:
+            if hasattr(theclass, name) and not hasattr(cls, name):
+                namespace[name] = make_method(name)
+        return type("%s(%s)" % (cls.__name__, theclass.__name__), (cls,), namespace)
+    
+    def __new__(cls, obj, *args, **kwargs):
+        """
+        creates an proxy instance referencing `obj`. (obj, *args, **kwargs) are
+        passed to this class' __init__, so deriving classes can define an 
+        __init__ method of their own.
+        note: _class_proxy_cache is unique per deriving class (each deriving
+        class must hold its own cache)
+        """
+        try:
+            cache = cls.__dict__["_class_proxy_cache"]
+        except KeyError:
+            cls._class_proxy_cache = cache = {}
+        try:
+            theclass = cache[obj.__class__]
+        except KeyError:
+            cache[obj.__class__] = theclass = cls._create_class_proxy(obj.__class__)
+        ins = object.__new__(theclass)
+        #theclass.__init__(ins, obj, *args, **kwargs)
+        return ins
+    
+def change_proxyobject(proxy, obj):
+    '''
+    changes the current object of proxy to the obj.
+    Note that evil things can happen if not care is taken so the objects are
+    of the same class
+    '''
+    object.__setattr__(proxy, '_obj', obj)
+    
+#==============================================================================
 class Database(object):
     '''A database class where object memebers are dynamically acessed
     and stored. I.e. the constants are only looked up when needed.
@@ -52,13 +158,14 @@ class Database(object):
         print 'Looking up value'
         return 1
     
-    def reset_database(self, name):
-        '''reset_database(self, name) --> None
+    def reset_database(self):
+        '''reset_database(self) --> None
         
         Resets the internal database
         '''
         stored_values = object.__getattribute__(self, 'stored_values')
         stored_values = {}
+    
 
 #==============================================================================
 class FormFactor(Database):
@@ -86,7 +193,11 @@ class FormFactor(Database):
         if abs(wavelength\
             - object.__getattribute__(self, 'wavelength')) > 1e-10:
             object.__setattr__(self, 'wavelength', wavelength)
-            object.__getattribute__(self, 'reset_database')()
+            #object.__getattribute__(self, 'reset_database')()
+            stored_vals = object.__getattribute__(self, 'stored_values')
+            for key in stored_vals:
+                f = object.__getattribute__(self, 'lookup_value')(key)
+                change_proxyobject(stored_vals[key], f)
         
     def __getattribute__(self, name):
         '''__getattribute__(self, name) --> value
@@ -104,7 +215,8 @@ class FormFactor(Database):
         looks up a value in the external database
         '''
         wl = object.__getattribute__(self, 'wavelength')
-        return object.__getattribute__(self, 'f_calc')(name, wl)
+        f = Proxy(object.__getattribute__(self, 'f_calc')(name, wl))
+        return f
     
 #==============================================================================
 class ScatteringLength(Database):
